--- a/index.html
+++ b/index.html
@@ -1,43 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sample Page</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        background-color: #f0f0f0;
-        margin: 0;
-        padding: 0;
-      }
-      .container {
-        max-width: 800px;
-        margin: 50px auto;
-        background-color: #fff;
-        padding: 20px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-      }
-      h1 {
-        color: #333;
-      }
-      p {
-        color: #666;
-      }
-    </style>
-  </head>
-  <body>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>TODO List with Vue.js</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <div id="app">
     <div class="container">
-      <h1>Welcome to the Sample Page</h1>
-      <p>This is a sample HTML page with embedded CSS and JavaScript.</p>
-      <button id="alertButton">Click Me</button>
+      <h1 class="text-center">TODO List</h1>
+      <ul>
+        <li v-for="(task, index) in todos" :key="index">
+          {{ task.title }}
+        </li>
+      </ul>
     </div>
-    <script>
-      document
-        .getElementById("alertButton")
-        .addEventListener("click", function () {
-          alert("Button was clicked!");
-        });
-    </script>
-  </body>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/vue@3/dist/vue.global.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="app.js"></script>
+</body>
+
 </html>
